fix logic cart